JSW Devsb/src/objects/Target__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Dealer_Name__r.Id</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Credit__c</fullName>
        <formula>Dealer_Name__r.Credit_Available__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code_Target__c</fullName>
        <formula>Customer_Code__c  +&apos;:&apos;+  Distribution_Channel__c  +&apos;:&apos;+  Division__c  +&apos;:&apos;+  Month__c  +&apos;:&apos;+  Year__c  +&apos;:&apos;+  Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Credit_Limit__c</fullName>
        <formula>Dealer_Name__r.Credit_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Group_1__c</fullName>
        <formula>Dealer_Name__r.Customer_Group_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Group 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Outstanding__c</fullName>
        <formula>Dealer_Name__r.Credit_Outstanding__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>Dealer_Name__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Actuals__c</fullName>
        <label>Dealer Actuals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel_Description__c</fullName>
        <formula>Dealer_Name__r.Distribution_Channel_Descrption__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Channel Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <formula>Territory__r.Districts__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Description__c</fullName>
        <formula>Dealer_Name__r.DivistionDesc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTD_Days__c</fullName>
        <formula>DAY( TODAY() )  - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Target__c</fullName>
        <formula>(( No_of_Days_MTD__c   /   No_of_Days_in_a_Month__c ) *  Target_in_QTY_MT__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSR_Actuals__c</fullName>
        <label>NSR Actuals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Days_MTD__c</fullName>
        <label>No of Days MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Days_in_a_Month__c</fullName>
        <label>No of Days in a Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Amount__c</fullName>
        <formula>Dealer_Name__r.Overdue_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pro_Rata_Acheivement__c</fullName>
        <formula>( Dealer_Actuals__c  /  MTD_Target__c ) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro Rata Acheivement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pro_Rata_Asking_Rate__c</fullName>
        <formula>(( Target_in_QTY_MT__c  -  Dealer_Actuals__c ) / ( No_of_Days_in_a_Month__c -  No_of_Days_MTD__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro Rata Asking Rate`</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Name__c</fullName>
        <label>SO Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <formula>Dealer_Name__r.Sales_District_text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <formula>Dealer_Name__r.Sales_Office_text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Territory__r.State_Master__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Start_Date__c</fullName>
        <label>Target Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_in_QTY_MT__c</fullName>
        <label>Target in QTY(MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Targets_Start_Date__c</fullName>
        <formula>DATE(VALUE(Year__c),CASE(Month__c,&quot;January&quot;,1,&quot;February&quot;,2,&quot;March&quot;,3,&quot;April&quot;,4,&quot;May&quot;,5,&quot;June&quot;,6,&quot;July&quot;,7,&quot;August&quot;,8,&quot;September&quot;,9,&quot;October&quot;,10,&quot;November&quot;,11,12),1)</formula>
        <label>Targets Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Territory1__c</fullName>
        <formula>Dealer_Name__r.Sales_Office_text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Code1__c</fullName>
        <formula>Dealer_Name__r.Sales_Office__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <label>Territory Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Desc__c</fullName>
        <label>Territory Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_no_of_Days_in_the_Month__c</fullName>
        <label>Total no of Days in the Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Dealer Targets</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Customer_Code__c</columns>
        <columns>NAME</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Dealer_Actuals__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Product__c</columns>
        <columns>Territory1__c</columns>
        <columns>District__c</columns>
        <columns>Total_no_of_Days_in_the_Month__c</columns>
        <columns>Target_Start_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BT</fullName>
        <columns>Customer_Code__c</columns>
        <columns>NAME</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Product__c</columns>
        <columns>Target_in_QTY_MT__c</columns>
        <columns>Dealer_Actuals__c</columns>
        <columns>Territory1__c</columns>
        <columns>District__c</columns>
        <columns>State__c</columns>
        <columns>Total_no_of_Days_in_the_Month__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Dealer_Name__c</field>
            <operation>equals</operation>
        </filters>
        <label>BT</label>
    </listViews>
    <listViews>
        <fullName>My_Targets</fullName>
        <columns>Customer_Code__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Dealer_Actuals__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Product__c</columns>
        <columns>Target_in_QTY_MT__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Targets</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Dealer_targets</fullName>
        <columns>Customer_Code__c</columns>
        <columns>NAME</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Product__c</columns>
        <columns>Target_in_QTY_MT__c</columns>
        <columns>Dealer_Actuals__c</columns>
        <columns>Territory1__c</columns>
        <columns>District__c</columns>
        <columns>State__c</columns>
        <columns>Total_no_of_Days_in_the_Month__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Code__c</field>
            <operation>contains</operation>
            <value>New</value>
        </filters>
        <label>New Dealer targets</label>
    </listViews>
    <nameField>
        <displayFormat>TRGT-{0000000000}</displayFormat>
        <label>Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>